# kanatest

./: .gitignore  ChangeLog  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
data/: Makefile.in
data/icons/: Makefile.in
data/icons/16x16/: Makefile.in
data/icons/22x22/: Makefile.in
data/icons/24x24/: Makefile.in
data/icons/32x32/: Makefile.in
data/icons/48x48/: Makefile.in
data/icons/scalable/: Makefile.in
data/pixmaps/: Makefile.in
po/: Makefile.am  Makefile.in  de.po  el.po  es.po  fi.po  fr.po  hr.po  hu.po  it.po  pl.po  pt.po  ru.po  zh_CN.po
src/: Makefile.am  Makefile.in  about.c  chart.c  gui.c  gui.h  gui_utils.c  options.c  stats.c  stock_icons.c
